<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_home" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_fox_logo"
            android:title="@string/nav_nodes" />
    </group>

    <item android:title="@string/action_settings">
        <menu>
            <group android:id="@+id/group_settings" android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/action_settings" />
            </group>
        </menu>
    </item>

    <item android:title="@string/action_about">
        <menu>
            <group android:id="@+id/group_about" android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_logs"
                    android:icon="@drawable/ic_logs"
                    android:title="@string/action_logs" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_info"
                    android:title="@string/action_about" />
            </group>
        </menu>
    </item>

</menu>
